Fixed CSS for layout - menu does not go off screen anymore.

--- a/www/css/client.css
+++ b/www/css/client.css
@@ -1,57 +1,53 @@
 body {
-	margin: 0px 0px 0px 0px;
-	background-color: #EFEFEF;
 	font-family: calibri;
 }
 
 #main {
 	position: fixed;
-	margin: 0px 0px 0px 0px;
-	top: 0%;
-	right: 20%;
-	bottom: 0%;
-	left: 0%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 250px;
+	overflow: scroll;
+	background-color: lightgray;
+}
+
+#mainCanvas {
+	height: 300;
+	width: 300;
+	margin: 10px;
+	border: 2px solid black;
+	background-color: white;
 }
 
 #panel {
-	border-left: 2px solid black;
 	position: absolute;
-	margin: 0px 0px 0px 0px;
-	top: 0%;
-	right: 0%;
-	bottom: 0%;
-	left: 80%;
-	background-color: #FFFFFF;
+	width: 250px;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	float: right;
+	border-left: 2px solid black;
+	background-color: white;
+}
+
+#simulationButtons {
+	padding: 4px;
+	text-align: center;
 }
 
 #generalControls {
-	margin: 0px;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	padding: 4px;
 	border-bottom: 1px solid black;
 	text-align: center;
 }
 
 #specificControls {
-	margin: 0px;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	padding: 4px;
 	border-bottom: 1px solid black;
 	text-align: center;
 }
 
 #dragItems {
-	padding-left: 4px;
-}
-
-#simulationButtons {
-	padding-left: 4px;
-	padding-top: 4px;
-	padding-bottom: 4px;
-	margin: 0px 0px 0px 0px;
-	text-align: center;
-}
-
-#canvasControls{
-	padding-top: 20px;
+	padding: 8px;
 }
